--- a/app/src/styles/Listen.css
+++ b/app/src/styles/Listen.css
@@ -2,7 +2,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  background: #d3dee4;
+  background: #ace7f3;
   overflow: hidden;
   position: relative;
 }
